--- a/rotation_nvr.ipynb
+++ b/rotation_nvr.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMlktvfA5aW2RVOegwTxz2B",
+      "authorship_tag": "ABX9TyN0uFjBdwn4Ko+hBDW5fZnF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 11,
       "metadata": {
         "id": "4AaGI_VlNYX2"
       },
@@ -55,7 +55,7 @@
         "    shape = random.choice(shapes)\n",
         "    return shape\n",
         "\n",
-        "def draw_shape(draw, shape, bounding_box, fill='black'):\n",
+        "def draw_shape(draw, shape, bounding_box, fill='lightgray'):\n",
         "    x1, y1, x2, y2 = bounding_box\n",
         "    center = ((x1 + x2) // 2, (y1 + y2) // 2)\n",
         "    radius = min(abs(x2 - x1), abs(y2 - y1)) // 2\n",
@@ -208,7 +208,7 @@
         "        additional_shape = generate_random_shape()\n",
         "        bounding_box = [random.randint(0, QUESTION_SIZE), random.randint(0, QUESTION_SIZE),\n",
         "                        random.randint(0, QUESTION_SIZE), random.randint(0, QUESTION_SIZE)]\n",
-        "        draw_shape(draw, additional_shape, bounding_box, fill='black')\n",
+        "        draw_shape(draw, additional_shape, bounding_box, fill='grey')\n",
         "        \n",
         "        # Draw a random arrow\n",
         "        arrow_center = (random.randint(0, QUESTION_SIZE), random.randint(0, QUESTION_SIZE))\n",
@@ -304,16 +304,12 @@
         "            }\n",
         "            question_set.append(question_info)\n",
         "        # You can add other topics in similar way\n",
-        "    return question_set\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n"
+        "    return question_set"
       ],
       "metadata": {
         "id": "kOipAlrJwW5b"
       },
-      "execution_count": 20,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -338,14 +334,12 @@
         "                option.save(os.path.join(output_folder, f'question_{idx}_option_{option_idx}.png'))\n",
         "            \n",
         "            f.write(f\"Question {idx}:\\n\")\n",
-        "            f.write(question['explanation'] + '\\n\\n')\n",
-        "\n",
-        "\n"
+        "            f.write(question['explanation'] + '\\n\\n')\n"
       ],
       "metadata": {
         "id": "nxbqj7LTwbRJ"
       },
-      "execution_count": 21,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -378,7 +372,7 @@
       "metadata": {
         "id": "VTNQxGKFzVya"
       },
-      "execution_count": 22,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -400,22 +394,22 @@
         "    print(\"Question set generated successfully!\")\n"
       ],
       "metadata": {
+        "id": "ayXdBMzHzXKK",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 88
         },
-        "id": "ayXdBMzHzXKK",
-        "outputId": "8bffec52-8b73-4cdf-f722-6809be1adb91"
+        "outputId": "dbcd338d-c650-456c-8d27-1f1d05ac5e42"
       },
-      "execution_count": 23,
+      "execution_count": 15,
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
             "Enter the topic: rotation\n",
-            "Enter the number of questions: 23\n",
-            "Enter the complexity level (easy, medium, hard): easy\n"
+            "Enter the number of questions: 20\n",
+            "Enter the complexity level (easy, medium, hard): hard\n"
           ]
         },
         {
@@ -477,7 +471,7 @@
               "<IPython.core.display.Javascript object>"
             ],
             "application/javascript": [
-              "download(\"download_583fa3d9-9dc9-4b43-aede-c26eeb668fa6\", \"questions.zip\", 100583)"
+              "download(\"download_c4a9a536-33e9-414b-a2f9-bfd8744e9718\", \"questions.zip\", 118194)"
             ]
           },
           "metadata": {}
